# tiv

./: .gitignore  Build.Dockerfile  CMakeLists.txt  Makefile  README.md  TODO.md
app/: stiv-jpeg.c
libstiv/: CMakeLists.txt
libstiv/src/: stiv.c  stiv.h
